--- a/css/common.css
+++ b/css/common.css
@@ -4,19 +4,32 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
 }
+
 ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
+
+h1,
+p {
+  margin: 0;
+}
+h1 {
+  margin-top: 16px;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.33;
+}
+
 button {
   cursor: pointer;
   border: none;
@@ -30,6 +43,48 @@ input {
   border: 1px solid #808080;
 }
 
+img {
+  display: block;
+  width: 360px;
+  height: 300px;
+  object-fit: cover;
+}
+
+#categories {
+  max-width: 440px;
+  margin: 10px auto;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  padding: 24px;
+  border-radius: 8px;
+  background: white;
+}
+
+.item {
+  padding: 16px;
+  border-radius: 8px;
+  background: #f6f6fe;
+}
+
+.item > h2 {
+  margin-bottom: 16px;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+
+.item > ul {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.item > ul > li {
+  border-radius: 4px;
+  border: 1px solid #808080;
+  padding: 8px 16px;
+}
 .gallery {
   max-width: 1440px;
   padding: 100px 140px;
@@ -41,9 +96,113 @@ input {
   gap: 48px 24px;
   background: #fff;
 }
- img {
-  display: block;
-  width: 360px;
-  height: 300px;
-  object-fit: cover;
+
+#name-input {
+  margin-top: 10px;
+  min-width: 360px;
+}
+.login-form {
+  max-width: 408px;
+  margin: 10px auto;
+  padding: 24px;
+  background-color: white;
+  border-radius: 8px;
+}
+
+.login-form > label {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.login-form button {
+  margin-top: 16px;
+  padding: 8px 16px;
+  border-radius: 8px;
+  font-weight: 500;
+  background: #4e75ff;
+  color: white;
+  min-width: 86px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.login-form button:hover {
+  background-color: #6c8cff;
+}
+
+.widget {
+  width: 169px;
+  height: 80px;
+}
+.widget > p {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+.widget > button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 148px;
+  height: 40px;
+  background-color: #4e75ff;
+}
+.widget > button:hover {
+  background-color: #6c8cff;
+}
+#controls {
+  max-width: 486px;
+  margin: 10px auto;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 32px;
+  gap: 16px;
+  border-radius: 8px;
+  background-color: #f6f6fe;
+}
+
+#controls input {
+  padding: 8px;
+  border-radius: 8px;
+  min-width: 150px;
+  text-align: center;
+}
+
+#controls button {
+  min-width: 120px;
+  padding: 8px 16px;
+  border-radius: 8px;
+  font-weight: 500;
+  color: white;
+  line-height: 1.5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+#controls button[data-create] {
+  background-color: #4e75ff;
+}
+
+#controls button[data-create]:hover {
+  background-color: #6c8cff;
+}
+
+#controls button[data-destroy] {
+  background-color: #ff4e4e;
+}
+
+#controls button[data-destroy]:hover {
+  background-color: #ff7070;
+}
+
+#boxes {
+  border-radius: 8px;
+  background-color: #f6f6fe;
+  display: flex;
+  gap: 16px;
+  flex-wrap: wrap;
+  padding: 32px;
 }
